Setup for Registration Dropdowns
Setup for Registration Dropdowns

--- a/ClotheOurKids.Web/Views/Account/Register.cshtml
+++ b/ClotheOurKids.Web/Views/Account/Register.cshtml
@@ -88,7 +88,7 @@
                         <div class="col-md">
                             <div class="md-form">
                                 <i class="fa fa-bell prefix"></i>
-                                @Html.DropDownListFor(m => m.PositionId, Model.Positions)
+                                @Html.DropDownListFor(m => m.PositionId, new SelectList(Model.AvailablePositions, "Name", "PositionId", Model.PositionId))
                                 @Html.LabelFor(m => m.PositionId)
                                 <select id="positionSelect" class="mdb-select"></select>
                                 <label for="positionSelect">Position</label>
@@ -141,18 +141,18 @@
     <script>
         $(document).ready(function () {
 
-            var positions = { "1": "Principal", "2": "Teacher", "3": "Counselor", "4": "FACT Coordinator" };
+            //var positions = { "1": "Principal", "2": "Teacher", "3": "Counselor", "4": "FACT Coordinator" };
 
             $('#positionSelect').append('<option value="0" disabled selected>Choose Your Position</option>');
             $('#locationSelect').append('<option value="0" disabled selected>Choose Your School/Office</option>');
 
 
-            $.each(positions, function (key, value) {
-                $('#positionSelect')
-                    .append($('<option></option>')
-                        .attr("value", key)
-                        .text(value));
-            });
+            //$.each(positions, function (key, value) {
+            //    $('#positionSelect')
+            //        .append($('<option></option>')
+            //            .attr("value", key)
+            //            .text(value));
+            //});
 
             $('.mdb-select').material_select();
 
