--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -128,6 +128,94 @@
 
 
 
+/*select 2 styling*/
+
+.md-select2 {
+    width: 100%;
+}
+
+.select2-container {
+    margin-top: .5rem;    
+}
+
+.md-form .select2-container {
+    margin-left: 3rem !important;
+    width: calc(100% - 3rem) !important;
+}
+
+/*single select remove borders - no round corners*/
+.select2-container--default .select2-selection--single {
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid #ccc;
+    background-color: transparent;
+    border-radius: 0;
+}
+
+.select2-dropdown, .select2-dropdown--above {
+    border-radius: 0;
+    padding: 1rem;
+    border: 0;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+}
+
+.select2-container--default .select2-results__option[aria-selected=true] {
+    background-color: #fff;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    background-color: #eee;
+    color: rgba(0, 0, 0, .87);
+}
+
+.select2-results__option {
+    color: #4285F4;
+}
+
+/*multiple select remove borders - no round corners*/ 
+.select2-container--default .select2-selection--multiple {
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid #ccc;
+    background-color: transparent;
+    border-radius: 0;
+    height: 40px;
+}
+
+/*single select remove focus*/
+.select2-container *:focus {
+    outline: none;
+}
+
+/*multiple select remove focus*/ 
+.select2-container--default.select2-container--focus .select2-selection--multiple {
+    border: 0;
+}
+
+/*multiple select choices style*/
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background-color: #fff;
+}
+
+.select2-selection__choice__remove {
+    color: #381fa8 !important;
+}
+
+.select2-label {
+    position: absolute !important;
+    top: -14px !important;
+    font-size: 0.8rem !important;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    padding-left: 0;
+}
+
+
+
+
 
 
 
