Fix Error Display For Registration
Fix Error Display For Registration. Need custom error code in model for Password complexity on client side.

--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -214,9 +214,26 @@
 }
 
 
+.md-form .input-validation-error {
+    border-bottom: 1px solid #ff4444;
+    box-shadow: 0 1px 0 0 #ff4444;
+    color: #ff4444;
+}
 
+.md-form input.input-validation-error + label {
+    color: #ff4444;
+}
 
+.md-form .field-validation-error {
+    color: #ff4444;
+    font-size: 0.75rem;
+    margin-left: 3rem;
+}
 
+.validation-summary-errors {
+    color: #ff4444;
+    font-size: 0.75rem;
+}
 
 
 
