Finish registration page
Finish registration page. Update Model for Login and Layout for Logged In Users

--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -228,6 +228,7 @@
     color: #ff4444;
     font-size: 0.75rem;
     margin-left: 3rem;
+    display: inline-block;
 }
 
 .validation-summary-errors {
