--- a/ClotheOurKids.Web/Views/Manage/ChangePassword.cshtml
+++ b/ClotheOurKids.Web/Views/Manage/ChangePassword.cshtml
@@ -3,38 +3,58 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="container">
+    <h2>Change Your Password</h2>
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+
+        <div class="row mt-2">
+            <div class="col">
+                <div class="md-form">
+                    <i class="fa fa-lock prefix"></i>
+                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control validate" })
+                    @Html.LabelFor(m => m.OldPassword)
+                    @Html.ValidationMessageFor(m => m.OldPassword)
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+
+        <div class="row mt-2">
+            <div class="col">
+                <div class="md-form">
+                    <i class="fa fa-lock prefix"></i>
+                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control validate" })
+                    @Html.LabelFor(m => m.NewPassword)
+                    @Html.ValidationMessageFor(m => m.NewPassword)
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+
+        <div class="row mt-2">
+            <div class="col">
+                <div class="md-form">
+                    <i class="fa fa-lock prefix"></i>
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control validate" })
+                    @Html.LabelFor(m => m.ConfirmPassword)
+                    @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+
+        <div class="row mt-2 text-center">
+            <div class="col">
+                <input type="submit" value="Change password" class="btn btn-primary btn-rounded btn-lg waves-effect waves-light" />
+            </div>
         </div>
-    </div>
-}
+    }
+
+</div>
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
