--- a/ClotheOurKids.Web/Views/Shared/_LoginForm.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_LoginForm.cshtml
@@ -15,33 +15,30 @@
             </div>
             <!--Body-->
             <div class="modal-body">
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
+                <form class="form-horizontal">
                     @Html.AntiForgeryToken()
-
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
                     <div class="md-form">
                         <i class="fa fa-envelope prefix"></i>
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control validate" })
                         @Html.LabelFor(m => m.Email)
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                     <div class="md-form">
                         <i class="fa fa-lock prefix"></i>
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control validate" })
                         @Html.LabelFor(m => m.Password)
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
                         <input type="checkbox" class="filled-in" id="RememberMe" name="RememberMe" />
                         <label for="RememberMe">Remember Me?</label>
                         <input name="RememberMe" type="hidden" value="false" />
                     </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Log In</button>
+                    <div id="loginError" class="red-text hidden">
+
                     </div>
-                }
+                    <div class="text-center">
+                        <button id="btnLogIn" class="btn btn-primary">Log In</button>
+                    </div>
+                </form>
             </div>
             <!--Footer-->
             <div class="modal-footer">
